# googletest-ci

./: .travis.yml  CMakeLists.txt  README.md  azure-pipelines.yml  foo_test.cc  shippable.yml
.circleci/: config.yml
.github/workflows/: ci-cmake_tests.yml
